--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.Codojo"
         tools:targetApi="31">
         <activity
+            android:name=".JavaCourse_02_VariablesQuizActivity"
+            android:exported="false" />
+        <activity
             android:name=".JavaCourse_01_VariablesActivity"
             android:exported="false" />
         <activity
