--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.Codojo"
         tools:targetApi="31">
         <activity
+            android:name=".JavaCourse_04_OperatorsQuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".JavaCourse_03_OperatorsActivity"
+            android:exported="false" />
+        <activity
             android:name=".JavaCourse_02_VariablesQuizActivity"
             android:exported="false" />
         <activity
@@ -25,7 +31,7 @@
             android:name=".JavaCourse_00_IntroductionActivity"
             android:exported="false" />
         <activity
-            android:name=".CSharpCourseListActivity"
+            android:name=".PythonCourseListActivity"
             android:exported="false" />
         <activity
             android:name=".JavaCourseListActivity"
