--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.Codojo"
         tools:targetApi="31">
         <activity
+            android:name=".JavaCourse_06_LoopsQuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".JavaCourse_05_LoopsActivity"
+            android:exported="false" />
+        <activity
             android:name=".JavaCourse_04_OperatorsQuizActivity"
             android:exported="false" />
         <activity
