--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,27 @@
         android:theme="@style/Theme.Codojo"
         tools:targetApi="31">
         <activity
+            android:name=".JavaCourses_Final_QuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".JavaCourses_12_TypeconversionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".JavaCourses_11_ClassActivity"
+            android:exported="false" />
+        <activity
+            android:name=".JavaCourse_10_MethodsQuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".JavaCourse_09_MethodsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".JavaCourse_08_ArraysQuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".JavaCourse_07_ArraysActivity"
+            android:exported="false" />
+        <activity
             android:name=".JavaCourse_06_LoopsQuizActivity"
             android:exported="false" />
         <activity
