--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,27 @@
         android:theme="@style/Theme.Codojo"
         tools:targetApi="31">
         <activity
+            android:name=".PythonCourse_Final_QuizActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PythonCourse_05_FileHandlingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PythonCourse_04_RegExActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PythonCourse_03_StructuresActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PythonCourse_02_ModulesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PythonCourse_01_SynthaxActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PythonCourse_00_IntroductionActivity"
+            android:exported="false" />
+        <activity
             android:name=".JavaCourse_Final_QuizActivity"
             android:exported="false" />
         <activity
